# T_SWE_2025_2026

./: .gitignore  .gitmodules  README.md  config.py  loraServer_CAN_threading.py  lora_server.py  min_fsm.py
CAN_LoopBack/Core/Src/: main_app.c
CAN_LoopBack/Debug/: CAN_LoopBack.elf  CAN_LoopBack.list  CAN_LoopBack.map
CAN_LoopBack_IT/Core/Src/: main_app.c
CAN_LoopBack_IT/Debug/: CAN_LoopBack_IT.elf  CAN_LoopBack_IT.list  CAN_LoopBack_IT.map
CAN_Normal_Mode_2Nodes/Core/Src/: main_app.c
CAN_Normal_Mode_2Nodes/Debug/: CAN_Normal_Mode_2Nodes.elf  CAN_Normal_Mode_2Nodes.list  CAN_Normal_Mode_2Nodes.map  makefile
FSM/: fsm.py
FSM/src/: fsm.py
Firmwares/: README.md
Firmwares/LED_Controller_Firmware/: .cproject  .mxproject  .project  LED_Controller_Firmware (3).launch  LED_Controller_Firmware Debug (1).launch  LED_Controller_Firmware Debug.launch  LED_Controller_Firmware.ioc  LED_Controller_Firmware.launch
Firmwares/LED_Controller_Firmware/Debug/: CAN_Normal_Mode_2Nodes.list  CAN_Normal_Mode_2Nodes.map  (+4 more)
GUI/: AlbertaLoop_UI.py  CustomLora.py  main.py
GUI/Actions/: Command.py
GUI/cpp-qt5/: CMakeLists.txt  CircularBuffer.cpp  CircularBuffer.h  Commands.cpp  Commands.h  MainWindow.cpp  MainWindow.h  PodNetWidget.cpp  PodNetWidget.h  SocketComms.cpp  SocketComms.h  main.cpp
Legacy_Test_Code/: Megamotor_Plus_With_Serial_Forward_and_Reverse.ino
Test Code/Alberaloop Motor Controller/: platformio.ini
Test Code/Albertaloop Brake Controller/: platformio.ini
Test Code/Socket Communication Tests/: echo-client.py  echo-server.py
utils/: formatPayload.py
(+48 files in other folders)
